--- a/pharmaccess.bib
+++ b/pharmaccess.bib
@@ -1080,11 +1080,11 @@
 }
 
 @misc{openhie,
-  title = {{{OpenHIE Framework}} v5.0},
-  year = {2022},
-  month = jul,
+  title = {{{OpenHIE Framework}} v5.2-En},
+  year = {2024},
+  month = aug,
   journal = {OpenHIE},
-  urldate = {2024-02-05},
+  urldate = {2024-08-27},
   abstract = {OpenHIE is a community of individuals who strive to develop health information exchanges that improve patient care, health, and so much more.},
   howpublished = {https://ohie.org/},
   langid = {american},
@@ -2573,21 +2573,21 @@
   file = {/Users/dkapitan/Zotero/storage/X6I7RR8L/Panda and Thakur - 2016 - Decentralization and health system performance – a focused review of dimensions, difficulties, and d.pdf;/Users/dkapitan/Zotero/storage/6DNMPL2K/s12913-016-1784-9.html}
 }
 
-@article{baran1964distributed,
-  title = {On {{Distributed Communications Networks}}},
-  author = {Baran, P.},
-  year = {1964},
-  month = mar,
-  journal = {IEEE Transactions on Communications Systems},
-  volume = {12},
-  number = {1},
-  pages = {1--9},
-  issn = {1558-2647},
-  doi = {10.1109/TCOM.1964.1088883},
+@article{kossi2013developing,
+  title = {Developing Decentralised Health Information Systems in Developing Countries --Cases from {{Sierra Leone}} and {{Kenya}}},
+  author = {Kossi, Edem Kwame and S{\ae}b{\o}, Johan Ivar and Braa, J{\o}rn and Jalloh, Mohamed Mumeneeh and Manya, Ayub},
+  year = {2013},
+  journal = {The Journal of Community Informatics},
+  volume = {9},
+  number = {2},
+  issn = {1712-4441},
+  doi = {10.15353/joci.v9i2.3164},
   urldate = {2024-08-12},
-  abstract = {This paper briefly reviews the distributed communication network concept in which each station is connected to all adjacent stations rather than to a few switching points, as in a centralized system. The payoff for a distributed configuration in terms of survivability in the cases of enemy attack directed against nodes, links or combinations of nodes and links is demonstrated. A comparison is made between diversity of assignment and perfect switching in distributed networks, and the feasibility of using low-cost unreliable communication links, even links so unreliable as to be unusable in present type networks, to form highly reliable networks is discussed. The requirements for a future all-digital data distributed network which provides common user service for a wide range of users having different requirements is considered. The use of a standard format message block permits building relatively simple switching mechanisms using an adaptive store-and-forward routing policy to handle all forms of digital data including digital voice. This network rapidly responds to changes in the network status. Recent history of measured network traffic is used to modify path selection. Simulation results are shown to indicate that highly efficient routing can be performed by local control without the necessity for any central, and therefore vulnerable, control point.},
-  keywords = {Buildings,Centralized control,Communication networks,Communication switching,Communication system control,History,Information systems,Network synthesis,Routing,Telecommunication network reliability},
-  file = {/Users/dkapitan/Zotero/storage/GXJYF89Z/Baran - 1964 - On Distributed Communications Networks.pdf}
+  abstract = {Health service provision is a public concern that mostly takes place at community level, through primary health care. Using cases from Sierra Leone and Kenya, this study shows how country health information systems, producing simple information products such as quarterly bulletins and league tables being distributed widely, have enabled the communities to be engaged in improving the health status of the population. The community based information systems were part of a national system and the usefulness of comparing local data with data from other communities and from across the country in pursuing equity in health services provision is demonstrated. A community based information system is thus benefiting from being part of and integrated with the larger national system. The article presents and discusses community based participatory approaches to developing information systems which are enabling the community to take ownership and `cultivate' culturally appropriate systems. Illustrated by the cases, the article argues that modern ICT and Internet based technologies, and even `cloud' based infrastructures, are indeed appropriate technologies even at community level in rural Africa.},
+  copyright = {Copyright (c)},
+  langid = {english},
+  keywords = {Health Information Systems,Information Use,Kenya,Participatory Design,Sierra Leone},
+  file = {/Users/dkapitan/Zotero/storage/ISG2JQDW/Kossi et al. - 2013 - Developing decentralised health information systems in developing countries –cases from Sierra Leone.pdf}
 }
 
 @article{leifer1988matching,
@@ -2608,21 +2608,21 @@
   file = {/Users/dkapitan/Zotero/storage/JHHZ66SS/Leifer - 1988 - Matching Computer-Based Information Systems with Organizational Structures.pdf}
 }
 
-@article{kossi2013developing,
-  title = {Developing Decentralised Health Information Systems in Developing Countries --Cases from {{Sierra Leone}} and {{Kenya}}},
-  author = {Kossi, Edem Kwame and S{\ae}b{\o}, Johan Ivar and Braa, J{\o}rn and Jalloh, Mohamed Mumeneeh and Manya, Ayub},
-  year = {2013},
-  journal = {The Journal of Community Informatics},
-  volume = {9},
-  number = {2},
-  issn = {1712-4441},
-  doi = {10.15353/joci.v9i2.3164},
+@article{baran1964distributed,
+  title = {On {{Distributed Communications Networks}}},
+  author = {Baran, P.},
+  year = {1964},
+  month = mar,
+  journal = {IEEE Transactions on Communications Systems},
+  volume = {12},
+  number = {1},
+  pages = {1--9},
+  issn = {1558-2647},
+  doi = {10.1109/TCOM.1964.1088883},
   urldate = {2024-08-12},
-  abstract = {Health service provision is a public concern that mostly takes place at community level, through primary health care. Using cases from Sierra Leone and Kenya, this study shows how country health information systems, producing simple information products such as quarterly bulletins and league tables being distributed widely, have enabled the communities to be engaged in improving the health status of the population. The community based information systems were part of a national system and the usefulness of comparing local data with data from other communities and from across the country in pursuing equity in health services provision is demonstrated. A community based information system is thus benefiting from being part of and integrated with the larger national system. The article presents and discusses community based participatory approaches to developing information systems which are enabling the community to take ownership and `cultivate' culturally appropriate systems. Illustrated by the cases, the article argues that modern ICT and Internet based technologies, and even `cloud' based infrastructures, are indeed appropriate technologies even at community level in rural Africa.},
-  copyright = {Copyright (c)},
-  langid = {english},
-  keywords = {Health Information Systems,Information Use,Kenya,Participatory Design,Sierra Leone},
-  file = {/Users/dkapitan/Zotero/storage/ISG2JQDW/Kossi et al. - 2013 - Developing decentralised health information systems in developing countries –cases from Sierra Leone.pdf}
+  abstract = {This paper briefly reviews the distributed communication network concept in which each station is connected to all adjacent stations rather than to a few switching points, as in a centralized system. The payoff for a distributed configuration in terms of survivability in the cases of enemy attack directed against nodes, links or combinations of nodes and links is demonstrated. A comparison is made between diversity of assignment and perfect switching in distributed networks, and the feasibility of using low-cost unreliable communication links, even links so unreliable as to be unusable in present type networks, to form highly reliable networks is discussed. The requirements for a future all-digital data distributed network which provides common user service for a wide range of users having different requirements is considered. The use of a standard format message block permits building relatively simple switching mechanisms using an adaptive store-and-forward routing policy to handle all forms of digital data including digital voice. This network rapidly responds to changes in the network status. Recent history of measured network traffic is used to modify path selection. Simulation results are shown to indicate that highly efficient routing can be performed by local control without the necessity for any central, and therefore vulnerable, control point.},
+  keywords = {Buildings,Centralized control,Communication networks,Communication switching,Communication system control,History,Information systems,Network synthesis,Routing,Telecommunication network reliability},
+  file = {/Users/dkapitan/Zotero/storage/GXJYF89Z/Baran - 1964 - On Distributed Communications Networks.pdf}
 }
 
 @misc{kelley2020digital,
@@ -3014,17 +3014,31 @@
   file = {/Users/dkapitan/Zotero/storage/4ILW5EWA/Prainsack - 2019 - Logged out Ownership, exclusion and public value .pdf}
 }
 
-@misc{contexture2023national,
-  title = {National {{Networks}} and {{HIEs}}: {{The Various Crossroads}} of {{Data Exchange}}},
-  shorttitle = {National {{Networks}} and {{HIEs}}},
-  author = {Contexture},
+@misc{projects,
+  title = {Projects {\textbar} {{Digital Impact Exchange}}},
+  urldate = {2024-08-20},
+  abstract = {List of key projects provided by the Digital Impact Exchange, to support users in the deployment of digital technologies designed to address the Sustainable Development Goals (SDGs).},
+  howpublished = {https://exchange.dial.global/projects/dominica-integrated-information-systems-for-health-diish},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/TLPV6XQG/dominica-integrated-information-systems-for-health-diish.html}
+}
+
+@article{torab-miandoab2023interoperability,
+  title = {Interoperability of Heterogeneous Health Information Systems: A Systematic Literature Review},
+  shorttitle = {Interoperability of Heterogeneous Health Information Systems},
+  author = {{Torab-Miandoab}, Amir and {Samad-Soltani}, Taha and Jodati, Ahmadreza and {Rezaei-Hachesu}, Peyman},
   year = {2023},
   month = jan,
-  journal = {Contexture},
+  journal = {BMC Medical Informatics and Decision Making},
+  volume = {23},
+  pages = {18},
+  issn = {1472-6947},
+  doi = {10.1186/s12911-023-02115-5},
   urldate = {2024-08-20},
-  abstract = {Background~ Contexture, as a health information exchange (HIE), serves a critical role in the overall ecosystem of data exchange and electronic health record (EHR) connectivity. HIEs were born as},
-  langid = {american},
-  file = {/Users/dkapitan/Zotero/storage/3DC4T5DU/national-networks-and-health-information-exchanges-the-various-crossroads-of-data-exchange.html}
+  abstract = {Background The lack of interoperability between health information systems reduces the quality of care provided to patients and wastes resources. Accordingly, there is an urgent need to develop integration mechanisms among the various health information systems. The aim of this review was to investigate the interoperability requirements for heterogeneous health information systems and to summarize and present them. Methods In accordance with the PRISMA guideline, a broad electronic search of all literature was conducted on the topic through six databases, including PubMed, Web of science, Scopus, MEDLINE, Cochrane Library and Embase to 25 July 2022. The inclusion criteria were to select English-written articles available in full text with the closest objectives. 36 articles were selected for further analysis. Results Interoperability has been raised in the field of health information systems from 2003 and now it is one of the topics of interest to researchers. The projects done in this field are mostly in the national scope and to achieve the electronic health record. HL7 FHIR, CDA, HIPAA and SNOMED-CT, SOA, RIM, XML, API, JAVA and SQL are among the most important requirements for implementing interoperability. In order to guarantee the concept of data exchange, semantic interaction is the best choice because the systems can recognize and process semantically similar information homogeneously. Conclusions The health industry has become more complex and has new needs. Interoperability meets this needs by communicating between the output and input of processor systems and making easier to access the data in the required formats. Supplementary Information The online version contains supplementary material available at 10.1186/s12911-023-02115-5.},
+  pmcid = {PMC9875417},
+  pmid = {36694161},
+  file = {/Users/dkapitan/Zotero/storage/EFKGRWHM/Torab-Miandoab et al. - 2023 - Interoperability of heterogeneous health information systems a systematic literature review.pdf}
 }
 
 @article{holmgren2023health,
@@ -3046,31 +3060,17 @@
   file = {/Users/dkapitan/Zotero/storage/AB88CDYP/Holmgren et al. - 2023 - Health Information Exchange Understanding the Policy Landscape and Future of Data Interoperability.pdf}
 }
 
-@article{torab-miandoab2023interoperability,
-  title = {Interoperability of Heterogeneous Health Information Systems: A Systematic Literature Review},
-  shorttitle = {Interoperability of Heterogeneous Health Information Systems},
-  author = {{Torab-Miandoab}, Amir and {Samad-Soltani}, Taha and Jodati, Ahmadreza and {Rezaei-Hachesu}, Peyman},
+@misc{contexture2023national,
+  title = {National {{Networks}} and {{HIEs}}: {{The Various Crossroads}} of {{Data Exchange}}},
+  shorttitle = {National {{Networks}} and {{HIEs}}},
+  author = {Contexture},
   year = {2023},
   month = jan,
-  journal = {BMC Medical Informatics and Decision Making},
-  volume = {23},
-  pages = {18},
-  issn = {1472-6947},
-  doi = {10.1186/s12911-023-02115-5},
+  journal = {Contexture},
   urldate = {2024-08-20},
-  abstract = {Background The lack of interoperability between health information systems reduces the quality of care provided to patients and wastes resources. Accordingly, there is an urgent need to develop integration mechanisms among the various health information systems. The aim of this review was to investigate the interoperability requirements for heterogeneous health information systems and to summarize and present them. Methods In accordance with the PRISMA guideline, a broad electronic search of all literature was conducted on the topic through six databases, including PubMed, Web of science, Scopus, MEDLINE, Cochrane Library and Embase to 25 July 2022. The inclusion criteria were to select English-written articles available in full text with the closest objectives. 36 articles were selected for further analysis. Results Interoperability has been raised in the field of health information systems from 2003 and now it is one of the topics of interest to researchers. The projects done in this field are mostly in the national scope and to achieve the electronic health record. HL7 FHIR, CDA, HIPAA and SNOMED-CT, SOA, RIM, XML, API, JAVA and SQL are among the most important requirements for implementing interoperability. In order to guarantee the concept of data exchange, semantic interaction is the best choice because the systems can recognize and process semantically similar information homogeneously. Conclusions The health industry has become more complex and has new needs. Interoperability meets this needs by communicating between the output and input of processor systems and making easier to access the data in the required formats. Supplementary Information The online version contains supplementary material available at 10.1186/s12911-023-02115-5.},
-  pmcid = {PMC9875417},
-  pmid = {36694161},
-  file = {/Users/dkapitan/Zotero/storage/EFKGRWHM/Torab-Miandoab et al. - 2023 - Interoperability of heterogeneous health information systems a systematic literature review.pdf}
-}
-
-@misc{projects,
-  title = {Projects {\textbar} {{Digital Impact Exchange}}},
-  urldate = {2024-08-20},
-  abstract = {List of key projects provided by the Digital Impact Exchange, to support users in the deployment of digital technologies designed to address the Sustainable Development Goals (SDGs).},
-  howpublished = {https://exchange.dial.global/projects/dominica-integrated-information-systems-for-health-diish},
-  langid = {english},
-  file = {/Users/dkapitan/Zotero/storage/TLPV6XQG/dominica-integrated-information-systems-for-health-diish.html}
+  abstract = {Background~ Contexture, as a health information exchange (HIE), serves a critical role in the overall ecosystem of data exchange and electronic health record (EHR) connectivity. HIEs were born as},
+  langid = {american},
+  file = {/Users/dkapitan/Zotero/storage/3DC4T5DU/national-networks-and-health-information-exchanges-the-various-crossroads-of-data-exchange.html}
 }
 
 @article{adler-milstein2021survey,
@@ -3129,4 +3129,115 @@
   abstract = {Background: Maternal and child health (MCH) is a global health concern, especially impacting low- and middle-income countries (LMIC). Digital health technologies are creating opportunities to address the social determinants of MCH by facilitating access to information and providing other forms of support throughout the maternity journey. Previous reviews in different disciplines have synthesized digital health intervention outcomes in LMIC. However, contributions in this space are scattered across publications in different disciplines and lack coherence in what digital MCH means across fields. Objective: This cross-disciplinary scoping review synthesized the existing published literature in 3 major disciplines on the use of digital health interventions for MCH in LMIC, with a particular focus on sub-Saharan Africa. Methods: We conducted a scoping review using the 6-stage framework by Arksey and O'Malley across 3 disciplines, including public health, social sciences applied to health, and human-computer interaction research in health care. We searched the following databases: Scopus, PubMed, Google Scholar, ACM Digital Library, IEEE Xplore, Web of Science, and PLOS. A stakeholder consultation was undertaken to inform and validate the review. Results: During the search, 284 peer-reviewed articles were identified. After removing 41 duplicates, 141 articles met our inclusion criteria: 34 from social sciences applied to health, 58 from public health, and 49 from human-computer interaction research in health care. These articles were then tagged (labeled) by 3 researchers using a custom data extraction framework to obtain the findings. First, the scope of digital MCH was found to target health education (eg, breastfeeding and child nutrition), care and follow-up of health service use (to support community health workers), maternal mental health, and nutritional and health outcomes. These interventions included mobile apps, SMS text messaging, voice messaging, web-based applications, social media, movies and videos, and wearable or sensor-based devices. Second, we highlight key challenges: little attention has been given to understanding the lived experiences of the communities; key role players (eg, fathers, grandparents, and other family members) are often excluded; and many studies are designed considering nuclear families that do not represent the family structures of the local cultures. Conclusions: Digital MCH has shown steady growth in Africa and other LMIC settings. Unfortunately, the role of the community was negligible, as these interventions often do not include communities early and inclusively enough in the design process. We highlight key opportunities and sociotechnical challenges for digital MCH in LMIC, such as more affordable mobile data; better access to smartphones and wearable technologies; and the rise of custom-developed, culturally appropriate apps that are more suited to low-literacy users. We also focus on barriers such as an overreliance on text-based communications and the difficulty of MCH research and design to inform and translate into policy.},
   langid = {english},
   file = {/Users/dkapitan/Zotero/storage/NL6RYLLC/Till et al. - 2023 - Digital Health Technologies for Maternal and Child.pdf;/Users/dkapitan/Zotero/storage/WS7432TR/e42161.html}
+}
+
+@article{bishop2007reflexive,
+  title = {A {{Reflexive Account}} of {{Reusing Qualitative Data}}: {{Beyond}}                     {{Primary}}/{{Secondary Dualism}}},
+  shorttitle = {A {{Reflexive Account}} of {{Reusing Qualitative Data}}},
+  author = {Bishop, Libby},
+  year = {2007},
+  month = may,
+  journal = {Sociological Research Online},
+  volume = {12},
+  number = {3},
+  pages = {43--56},
+  publisher = {SAGE Publications Ltd},
+  issn = {1360-7804},
+  doi = {10.5153/sro.1553},
+  urldate = {2024-08-26},
+  abstract = {Though secondary analysis of qualitative data is becoming more prevalent, relatively few methodological studies exist that provide reflection on the actual, not idealised, process. This paper offers a reflexive account of secondary analysis focused on the topic of convenience food and choice. Several phases of the research process are examined: understanding context, defining a subject area, finding data and sampling, later sampling and topic refinement, and relating to transcripts. For each phase, I explore if reusing data is different from using it in the first instance, and if so, how those differences manifest themselves. The paper closes with reflections on the differences, similarities, and relationships between primary and secondary analysis of qualitative data. Although differences exist regarding the researcher-respondent relationship, primary and secondary analyses are more alike than not. The suitability of each approach can only be assessed in light of a particular research question.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/3N2V35N9/Bishop - 2007 - A Reflexive Account of Reusing Qualitative Data B.pdf}
+}
+
+@article{janssen2024taxonomya,
+  title = {A {{Taxonomy}} for {{Health Information Systems}}},
+  author = {Janssen, Anna and Donnelly, Candice and Shaw, Tim},
+  year = {2024},
+  month = may,
+  journal = {Journal of Medical Internet Research},
+  volume = {26},
+  number = {1},
+  pages = {e47682},
+  publisher = {JMIR Publications Inc., Toronto, Canada},
+  doi = {10.2196/47682},
+  urldate = {2024-08-26},
+  abstract = {The health sector is highly digitized, which is enabling the collection of vast quantities of electronic data about health and well-being. These data are collected by a diverse array of information and communication technologies, including systems used by health care organizations, consumer and community sources such as information collected on the web, and passively collected data from technologies such as wearables and devices. Understanding the breadth of IT that collect these data and how it can be actioned is a challenge for the significant portion of the digital health workforce that interact with health data as part of their duties but are not for informatics experts. This viewpoint aims to present a taxonomy categorizing common information and communication technologies that collect electronic data. An initial classification of key information systems collecting electronic health data was undertaken via a rapid review of the literature. Subsequently, a purposeful search of the scholarly and gray literature was undertaken to extract key information about the systems within each category to generate definitions of the systems and describe the strengths and limitations of these systems.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/PE5MT8L7/e47682.html}
+}
+
+@article{evertsz2023what,
+  title = {What Constitutes Equitable Data Sharing in Global Health Research? {{A}} Scoping Review of the Literature on Low-Income and Middle-Income Country Stakeholders' Perspectives},
+  shorttitle = {What Constitutes Equitable Data Sharing in Global Health Research?},
+  author = {Evertsz, Natalia and Bull, Susan and Pratt, Bridget},
+  year = {2023},
+  month = mar,
+  journal = {BMJ Global Health},
+  volume = {8},
+  number = {3},
+  pages = {e010157},
+  publisher = {BMJ Specialist Journals},
+  issn = {2059-7908},
+  doi = {10.1136/bmjgh-2022-010157},
+  urldate = {2024-08-26},
+  abstract = {Introduction Despite growing consensus on the need for equitable data sharing, there has been very limited discussion about what this should entail in practice. As a matter of procedural fairness and epistemic justice, the perspectives of low-income and middle-income country (LMIC) stakeholders must inform concepts of equitable health research data sharing. This paper investigates published perspectives in relation to how equitable data sharing in global health research should be understood. Methods We undertook a scoping review (2015 onwards) of the literature on LMIC stakeholders' experiences and perspectives of data sharing in global health research and thematically analysed the 26 articles included in the review. Results We report LMIC stakeholders' published views on how current data sharing mandates may exacerbate inequities, what structural changes are required in order to create an environment conducive to equitable data sharing and what should comprise equitable data sharing in global health research. Conclusions In light of our findings, we conclude that data sharing under existing mandates to share data (with minimal restrictions) risks perpetuating a neocolonial dynamic. To achieve equitable data sharing, adopting best practices in data sharing is necessary but insufficient. Structural inequalities in global health research must also be addressed. It is thus imperative that the structural changes needed to ensure equitable data sharing are incorporated into the broader dialogue on global health research.},
+  chapter = {Original research},
+  copyright = {{\copyright} Author(s) (or their employer(s)) 2023. Re-use permitted under CC BY. Published by BMJ.. https://creativecommons.org/licenses/by/4.0/This is an open access article distributed in accordance with the Creative Commons Attribution 4.0 Unported (CC BY 4.0) license, which permits others to copy, redistribute, remix, transform and build upon this work for any purpose, provided the original work is properly cited, a link to the licence is given, and indication of whether changes were made. See: https://creativecommons.org/licenses/by/4.0/.},
+  langid = {english},
+  pmid = {36977523},
+  keywords = {Health policies and all other topics,Review},
+  file = {/Users/dkapitan/Zotero/storage/6N77WQNA/Evertsz et al. - 2023 - What constitutes equitable data sharing in global .pdf}
+}
+
+@misc{mucha2020artificial,
+  type = {{{SSRN Scholarly Paper}}},
+  title = {Artificial {{Intelligence Platforms}} -- {{A New Research Agenda}} for {{Digital Platform Economy}}},
+  author = {Mucha, Tomasz and Seppala, Timo},
+  year = {2020},
+  month = feb,
+  number = {3532937},
+  address = {Rochester, NY},
+  doi = {10.2139/ssrn.3532937},
+  urldate = {2024-08-27},
+  abstract = {Three out of nine of S\&P500 digital platform companies stand out as building own artificial intelligence (AI) platforms. There is overwhelming empirical evidence of AI technologies are being central to running a digital platform business. However, the current research agenda is not directing researchers to study AI technologies in the context of digital platforms. We have divided the proposed AI platforms research agenda as follows: The first set of questions we propose relates to an overall conceptualization of AI platforms. Thereafter, we recognize specific aspects of AI platforms, which need to be investigated in detail to gain understanding that is more complete. The second set of questions we propose relates to understanding the dynamics between AI platforms and the broader socio-economic context. This topic might be particularly relevant to economies of countries without indigenous AI platforms. Our paper builds on the proposition that AI is a general-purpose technology, which by itself carries properties of a digital platform.},
+  langid = {english},
+  keywords = {AI platforms,Artificial Intelligence,Platform Economy,Platforms,Research agenda},
+  file = {/Users/dkapitan/Zotero/storage/32B69SXT/Mucha and Seppala - 2020 - Artificial Intelligence Platforms – A New Research.pdf}
+}
+
+@misc{ohie_shr_planningandimplementationguidev1,
+  title = {{{OHIE}}\_{{SHR}}\_{{PlanningandImplementationGuideV1}}.0},
+  journal = {Google Docs},
+  urldate = {2024-08-27},
+  abstract = {OHIE Shared Health Record Planning and Implementation Guide       Table of Contents Introduction Shared Health Record Background Key Functions of the Shared Health Record Purpose and Structure of the Guide Community Engagement Step 1: Analyze the Environment Identify Stakeholders 1.2   Ident...},
+  howpublished = {https://docs.google.com/document/d/1as24q7-XHHM9FFa5s5xSbn38JHD7l6T3-9WAZqh9xks/edit?usp=embed\_facebook},
+  langid = {british},
+  file = {/Users/dkapitan/Zotero/storage/JI5Y2CIC/edit.html}
+}
+
+@article{broyles2016shared,
+  title = {Shared {{Longitudinal Health Records}} for {{Clinical}} and {{Population Health}}},
+  author = {Broyles, David and Crichton, Ryan and Jolliffe, Bob and S{\ae}b{\o}, Johan Ivar and Dixon, Brian E.},
+  year = {2016},
+  journal = {Health Information Exchange},
+  pages = {149--162},
+  doi = {10.1016/B978-0-12-803135-3.00010-4},
+  urldate = {2024-08-27},
+  abstract = {The ability of a health information exchange to consolidate information, collected in multiple, disparate information systems, into a single, person-centric health record can provide a comprehensive and longitudinal representation of an individual's medical history. Shared, longitudinal health records can be leveraged to enhance the delivery of individual clinical care and provide opportunities to improve health outcomes at the population level. This chapter will describe the clinical benefits imparted by the shared health record (SHR) component of the OpenHIE infrastructure. It will also characterize the potential population health benefits of the aggregate level data contained and distributed by the Health Management Information System component of OpenHIE. The chapter will further discuss the implementation of these systems., By the end of the chapter, the reader should be able to:\ding{108}Identify and describe the differences among an electronic medical record, electronic health record, and a shared heath record.\ding{108}Explain the role of a shared health record in a health information exchange.\ding{108}List and describe the components of a shared health record.\ding{108}Discuss the role and benefits of a health management information system within a health information exchange.\ding{108}Define a population health indicator.\ding{108}Identify and describe application domains for a health management information system.\ding{108}Define a database management system.\ding{108}Compare the implications of implementing a shared health record using an electronic health record system versus a database management system.\ding{108}Discuss emerging trends likely to shape the evolution of shared health records and health management information systems.},
+  pmcid = {PMC7150120},
+  pmid = {null},
+  file = {/Users/dkapitan/Zotero/storage/WET52AIR/Broyles et al. - 2016 - Shared Longitudinal Health Records for Clinical an.pdf}
+}
+
+@misc{osi2024open,
+  title = {The {{Open Source AI Definition}} v0.0.9},
+  year = {2024},
+  month = aug,
+  journal = {HackMD},
+  urldate = {2024-08-27},
+  abstract = {\# The Open Source AI Definition \#\#\# version 0.0.9 :::info :information\_source: This document follows},
+  howpublished = {https://hackmd.io/@opensourceinitiative/osaid-0-0-9},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/AJQAH36Y/osaid-0-0-9.html}
 }
